# template_native_cross_platform_cmake

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: build.yml  build_android.yml  documentation.yml  release.yml  test.yml
cmake/: PrintAllTargetProperties.cmake
cmake/templates/: version.h.in
src/: main.cpp
src/factorial/: factorial.cpp
